2002-07-30  Charles 'Buck' Krasic  <krasic@acm.org>
	* libdv 0.98 release.

	* add configure script to CVS repository, to ease the pain of
	  dealing with autotools version messiness.

2002-07-30  Dan Dennedy <dan@dennedy.org>
	* applied patch from Steven Schultz <sms@2BSD.COM> to add
	  cross-platform checks for endian.h.
	* Reverted YUY2 big-endian code because most adapters expect
	  little endian even on big endian architectures(?). A PCI thing?

2002-07-24  Dan Dennedy <dan@dennedy.org>
	* enc_input.c: applied patch from Peter Schlaile for
	  NTSC encoding, and tested and debugged ppm and pgm input filters
	  and encode functions.

2002-07-05  Dan Dennedy <dan@dennedy.org>
	* dv.h, headers.c: added dv_encode_metadata() to write
	  recording datetime and timcode.
	* dv.h, headers.c: added dv_encode_timecode() to write
	  a frame count as timecode.

2002-06-27  Dan Dennedy <dan@dennedy.org>
	* YUY2.c:dv_YUY2_init(): clamp y lut to 0..255 when clamp_luma is false.
	* playdv/oss.c: init audio format in native instead of little endian.

2002-06-19  Dan Dennedy <dan@dennedy.org>
	* YUY2.c, bitstream.h, dv_types.h:
		big-endian fixes by Daniel Kobras
	* libdv.pc.in, configure.ac:
		remove glib/gtk, add popt dependencies by Daniel Kobras
	* libdv/Makefile.am: bump libtool version to 2:0:0
	* configure.ac: bump package version to 0.9.6

2002-05-26  Stefan Lucke <Stefan.Lucke1@epost.de>
	* apply portability patch of Steven M. Schultz
	* fix off by one in rgb.c array bounds check
	
2002-05-23  Stefan Lucke <Stefan.Lucke1@epost.de>
	* bugfix for #440048, compile playdv with gtk support

2002-05-22  Stefan Lucke <Stefan.Lucke1@epost.de>
	* added clamping for rgb render too. (green speckle bug)

2002-05-22  Dan Dennedy <dan@dennedy.org>
	* dv.h: add int dv_get_recording_datetime_tm()

2002-05-21  Stefan Lucke <Stefan.Lucke1@epost.de>
	* avoid remaining shared memory segment after playdv crash
	* avoid decoder crash (bug #231580, #558590 etc.). There are some